# device_camera_kinect2

./: CMakeLists.txt  README.md  conanfile.py
config/: microsoftkinectsdk
doc/: SConscript
doc/utql/Sensor/: HandFusion.xml  MsKinect20.xml
src/: SConscript
src/kinect/: CMakeLists.txt  HandFusion.cpp  MsKinect.cpp  MsKinect.h  SConscript
