IF(WIN32)
	set(the_description "The UbiTrack MSKinect Components")
	ut_add_component(KinectCameraDriver DEPS utcore utdataflow utvision )
	
	SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
	
	FIND_PACKAGE(KinectSDK2)
	SET(KINECT_INCLUDE_DIRS )
	SET(KINECT_LIBRARIES )
	SET(HAVE_KINECT OFF)
	IF(KinectSDK2_FOUND)
		SET(HAVE_KINECT ON)
		add_definitions(-DHAVE_KINECT2)
		add_definitions(-DHAVE_KINECT)
		SET(KINECT_INCLUDE_DIRS ${KINECT_INCLUDE_DIRS} ${KinectSDK2_INCLUDE_DIRS})
		SET(KINECT_LIBRARIES ${KINECT_LIBRARIES} ${KinectSDK2_LIBRARIES})
	ENDIF(KinectSDK2_FOUND)

	ut_component_include_directories("src/kinect" ${KINECT_INCLUDE_DIRS} ${TINYXML_INCLUDE_DIR} ${LOG4CPP_INCLUDE_DIR} ${BOOSTBINDINGS_INCLUDE_DIR} ${LAPACK_INCLUDE_DIR} ${Boost_INCLUDE_DIR} ${OPENCV_INCLUDE_DIR} ${TBB_INCLUDE_DIR})
	ut_glob_component_sources(HEADERS "src/kinect/*.h" SOURCES "src/kinect/*.cpp")
	ut_create_multi_component(${KINECT_LIBRARIES} ${TBB_ALL_LIBRARIES})
	ut_install_utql_patterns()
ENDIF(WIN32)